# BFI-MCP

./: .dockerignore  .env.example  .gitignore  ALPIC_SETUP.md  CODEBUILD_TROUBLESHOOTING.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DOCKER.md  Dockerfile  HTTP_MIGRATION.md  IMPLEMENTATION_NOTES.md  INDEX.md  README.md  SETUP.md  buildspec.yml  data_loader.py  docker-compose.yml  filters.py  mcp_server.py  package.json  pyproject.toml  test.py  xmcp.config.ts
data/: bfi_all_films.json  bfi_christmas_films.json  bfi_classics.json  bfi_frederick_wiseman.json  bfi_in_person.json  bfi_james_cameron.json  bfi_melodrama.json  bfi_new_releases.json  bfi_re_releases.json  bfi_regular_programme.json  bfi_richard_burton.json
src/: dataLoader.ts  server.ts
